examples/kubernetes/terraria-calamity/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraria-calamity
  namespace: terraria-calamity
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: terraria-calamity
  template:
    metadata:
      labels:
        app: terraria-calamity
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: terraria
          image: ghcr.io/forcebyte/terraria-tmodloader-server:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: terraria
              containerPort: 7777
              protocol: TCP
          volumeMounts:
            - name: terraria-data
              mountPath: /home/tml/.local/share/Terraria/tModLoader
      volumes:
        - name: terraria-data
          persistentVolumeClaim:
            claimName: terraria-calamity-data
        - name: terraria-mods
          configMap:
            name: terraria-calamity-mods

---
apiVersion: v1
kind: Service
metadata:
  name: terraria
  namespace: terraria-calamity
spec:
  selector:
    app: terraria-calamity
  ports:
    - name: terraria
      protocol: TCP
      port: 7777
      targetPort: 7777
  type: ClusterIP
