examples/kubernetes/terraria-calamity/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: terraria
  namespace: terraria-calamity
spec:
  podSelector:
    matchLabels:
      app: terraria-calamity
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 7777
  egress:
    - ports:
        - protocol: UDP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
